--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client/client_menu.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client/client_menu.html.twig
@@ -26,7 +26,7 @@
             <a href="{{ path('events') }}">Event details</a>
         </li>
         <li>
-            <a href="{{ path('event_messages') }}">Messages</a>
+            <a href="{{ path('event_messages') }}" class="active-item">Messages</a>
         </li>
         <li>
             <a href="{{ path('artist_selection') }}">Artist selection</a>
