--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_tech_req.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_tech_req.html.twig
@@ -60,7 +60,7 @@
     </div>
 </div>
 <div class="tr-desc">
-    <span class="tr-desc-title">Music system</span>
+    <!--<span class="tr-desc-title">Music system</span>-->
     <p class="tr-desc-text">${selectedRequirement.description}</p>
 </div>
 <div class="tr-files">
