--- a/src/Acted/LegalDocsBundle/Resources/public/css/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/css/style.css
@@ -150,10 +150,7 @@ section.used-by {
     font-size: 15px;
     text-align: center;
     vertical-align: middle;
-
-    background-color: rgba(255, 255, 255, 1);
-    border: 0.156rem solid rgba(0, 0, 0, 0.32);
-    box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.17);
+    background: #fff;
 }
 
 .custom-checkbox label:after {
