Resolve bad commit. 04/01/2017 12:21 PM

--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -13,7 +13,7 @@
 @import "parts/how-it-works.css";
 @import "parts/loginAndRecovery.css";
 @import "parts/messages.css";
-@import "parts/prices_new.css";
+@import "parts/prices.css";
 @import "parts/qa.css";
 @import "parts/quotation.css";
 @import "parts/registration.css";
