Update bookings page ( Remove doubled euro signs). 04/01/2016 3:28 PM

--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/bookings.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/bookings.html.twig
@@ -3,16 +3,7 @@
 <main class="enquiries bookings">
 
     <div class="container">
-        <!-- THIS MENU VISIBLE ONLY ON DESCTIOP SCREEN-->
-        <!--<ul class="categories-menu">
-            <li class="menu-block"><a href="/messages">Messages</a></li>
-            <li class="menu-block"><a href="/enquiries">Enquiries</a></li>
-            <li class="menu-block"><a href="/bookings" class="active">Bookings</a></li>
-            <li class="menu-block"><a href="/agenda">Agenda</a></li>
-            <li class="menu-block"><a href="/prices">Prices</a></li>
-            <li class="menu-block"><a href="/reports">Reports</a></li>
-            <li class="menu-block"><a href="/feedbacks">Feedbacks</a></li>
-        </ul>-->
+
         {% include "ActedLegalDocsBundle:ChatRoom:dashboardmenu.html.twig" %}
 
         <div class="summary_block">
@@ -21,19 +12,19 @@
                 <li class="summary_block__ul__li clearfix">
                     <p>Total current bookings:</p>
                     <p class="summ">5000</p>
-                    <i class="pound">&pound;</i>
+                    <i class="pound"></i>
                     <i class="bookings"></i>
                 </li>
                 <li class="summary_block__ul__li clearfix">
                     <p>Collected in escrow:</p>
                     <p class="summ">2500</p>
-                    <i class="pound">&pound;</i>
+                    <i class="pound"></i>
                     <i class="escrow"></i>
                 </li>
                 <li class="summary_block__ul__li clearfix">
                     <p>Available:</p>
                     <p class="summ">2500</p>
-                    <i class="pound">&pound;</i>
+                    <i class="pound"></i>
                     <i class="available"></i>
                     <div class="controls">
                         <div class="button-gradient filled orange">
@@ -43,7 +34,7 @@
                 </li>
             </ul>
             <div class="total_collected">
-                <p>TOTAL COLLECTED - PAST BOOKINGS: <span class="pound_black"><i class="pound_black">&pound;</i></span><span class="total_collected__ammount">15000</span></p>
+                <p>TOTAL COLLECTED - PAST BOOKINGS: <span class="pound_black"><i class="pound_black"></i></span><span class="total_collected__ammount">15000</span></p>
                 <i class="total_collected_bag"></i>
             </div>
         </div>
