--- a/src/Acted/LegalDocsBundle/Resources/views/Default/confirmBookingModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/confirmBookingModal.html.twig
@@ -107,7 +107,7 @@
                         <label for="details_agree">I agree with these terms & condition</label>
                     </div>
                     <div class="button-gradient filled orange">
-                        <button type="button" class="btn register quotationSendbtn" v-on:click="proceedToPayment">Proceed to payment</button>
+                        <button type="button" class="btn register quotationSendbtn" v-on:click="proceedToPayment()">Proceed to payment</button>
                     </div>
                 </div>
             </form>
