--- a/src/Acted/LegalDocsBundle/Resources/views/Default/confirmBookingModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/confirmBookingModal.html.twig
@@ -9,7 +9,7 @@
                 <div class="modal-body">
                     <div class="row clearfix">
                         <div class="col-sm-6 no-pad section-1">
-                            <div class="quote-section">
+                            <div class="quotation-section">
                                 <div class="holder">
                                     <!--service start-->
                                     {% for p in order.performances %}
