--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_tech_req.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_tech_req.html.twig
@@ -51,7 +51,7 @@
 
 <span class="tr-title">Technical requirements</span>
 <div class="tr-select-container">
-    <select v-bind:disabled="userRole == 'ROLE_CLIENT'" class="tr-select" v-model="selectedRequirement" v-bind:disabled="!editable">
+    <select v-bind:disabled="userRole == 'ROLE_CLIENT'" class="tr-select" v-model="selectedRequirement" v-bind:disabled="!editable" v-on:change="saveTechReqs">
         <option v-for="tr in technicalRequirements" v-bind:value="tr">${ tr.title }</option>
     </select>
     <div>
