--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -226,9 +226,9 @@
 <!-- NEW Quotation payment section -->
 <script type="text/template" id="quot-payment-tmp">
     <%
-    var balancePercent = data.model.balancePercent;
-    if (typeof(balancePercent) == 'undefined') {
-    balancePercent = 50;
+    var depositPercent = data.model.depositPercent;
+    if (typeof(depositPercent) == 'undefined') {
+    depositPercent = 50;
     }
     %>
     <div class="row">
@@ -236,9 +236,9 @@
     </div>
     <div class="row payment-deposit">
         <select edit-quotation-payment-percent name="quotation-payment-percent">
-            <option <% if(balancePercent == 20) { %> selected <% } %> value="20">20%</option>
-            <option <% if(balancePercent == 30) { %> selected <% } %> value="30">30%</option>
-            <option <% if(balancePercent == 50) { %> selected <% } %> value="50">50%</option>
+            <option <% if(depositPercent == 20) { %> selected <% } %> value="20">20%</option>
+            <option <% if(depositPercent == 30) { %> selected <% } %> value="30">30%</option>
+            <option <% if(depositPercent == 50) { %> selected <% } %> value="50">50%</option>
         </select>
         <span>guaranteed Deposit payment on <b>Escrow Account</b></span>
         <div class="custom-checkbox">
@@ -247,7 +247,7 @@
         </div>
     </div>
     <div class="row payment-deposit-info">
-        <span class="payment-deposit-amount"><%depositPercent = 100-balancePercent%><%=depositPercent%>%</span><span> guaranteed Balance payment on <b>Escrow Account</b></span>
+        <span class="payment-balance-amount"><%balancePercent = 100-depositPercent%><%=balancePercent%>%</span><span> guaranteed Balance payment on <b>Escrow Account</b></span>
     </div>
     <div style="text-align: center;">
         <button quotation-send class="btn btn-quotation-send">Save</button>
