--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
@@ -159,7 +159,7 @@
 
                             <div class="controls">
                                 <div class="button-gradient filled orange">
-                                    <button class="btn" id="quoteRequsetSend">Create an event</button>
+                                    <button class="btn" id="quoteRequsetSend">Send</button>
                                 </div>
                             </div>
                         </div>
