--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
@@ -250,10 +250,13 @@
         </div>
         <!--quote section sta~rt-->
         <div class="col-lg-6 col-md-6 col-sm-6 no-padding">
+
             <div class="row quote-section">
                 <h2 class="title quot">Quote #{{ order.id }}</h2>
                 <!--quote section holder start-->
+
                 <div class="holder">
+                    {% if order.status > 0 %}
                         {% for p in order.performances %}
                             {% set performanceClass = 'service' %}
                             {% if p.data.type > 0 %}
@@ -313,14 +316,17 @@
                                 </li>
                             </ul>
                         </article>#}
+                    {% endif %}
                 </div>
                 <!--quote section holder end-->
                 <div class="row">
+                    {% if order.status > 0 %}
                     <div class="text-box">
                         <h3>Payment terms</h3>
                         <p><span class="percent">{{ order.guaranteedDepositTerm }}%</span> guaranteed Deposit payment on <b>Escrow Account</b></p>
                         <p><span class="percent">{{ order.guaranteedBalanceTerm }}%</span> guaranteed Balance payment on <b>Escrow Account</b></p>
                     </div>
+                    {% endif %}
                     <div class="controls">
                         <div class="button-gradient filled orange">
                             <button edit-order order-id="{{ order.id }}" v-bind:disabled="sendingAllowed" class="btn" type="submit">Edit Quotation</button>
@@ -328,6 +334,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="row section-info-footer hidden-sm hidden-md hidden-lg">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 no-pad">
                     <div class="custom-checkbox">
