--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
@@ -72,7 +72,7 @@
                     </p>
 
                     <div class="controls">
-                        {% if order.event.published_request is defined and order.event.published_request %}
+                        {% if order.status > 0%}
                             <div class="button-gradient filled orange">
                                 <button type="button" class="btn register quotationSendbtn" order-id="{{ order.id }}">Edit Quotation</button>
                             </div>
