--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -61,11 +61,11 @@
                 <h2 class="main-title">Chatroom #{{ chat.chat_id }}</h2>
                 <div class="hidden" id="chatId">{{ chat.chat_id }}</div>
 
-                <!--<div class="tooltip-message warning">
+                <div class="tooltip-message warning">
                     <i class="notification-bell" aria-hidden="true"></i>
                     <span>The client has updated the event details, please validate them!</span>
                 </div>
-                <div class="tooltip-message info">
+                <!--<div class="tooltip-message info">
                     <i class="notification-bell" aria-hidden="true"></i>
                     <span>The client has updated the performance time, please confirm you are fine with this change</span>
                 </div>-->
@@ -300,7 +300,7 @@
                         </div>
                         <div class="controls">
                             <div class="button-gradient filled orange">
-                                <button class="btn " id="sendMsg" type="submit" v-bind:disabled="sendingAllowed" chatMessageSending>Send</button>
+                                <button class="btn " id="sendMsg" type="submit" chatMessageSending>Send</button>
                             </div>
                         </div>
                     </div>
