--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/enquiries.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/enquiries.css
@@ -63,23 +63,24 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    text-align: center;
 }
 
-.act-request .controls>.button-gradient.filled>.btn {
+.act-request .controls > .button-gradient.filled>.btn {
     font-size: 13px!important;
     height: 26px!important;
 }
 
-.act-request .controls>.button-gradient .btn {
-    font-size: 13px!important;
-    height: 23px!important;
+.act-request .controls > .button-gradient .btn {
+    font-size: 13px !important;
+    height: 23px !important;
     padding: 0 23px;
-    width: auto!important;
 }
 
-.act-request .controls>.button-gradient {
-    margin: 0 15px!important;
+.act-request .controls > .button-gradient {
+    margin: 0 15px 0 0;
+}
+.act-request .act-request-message.expandable {
+    margin: 0px 0 38px;
 }
 
 .act-request-title {
@@ -112,13 +113,18 @@
 
 .act-request-quotation-label {
     font-family: LatoRegular;
-    font-size: 12px;
+    font-size: 14px;
     color: #FFF;
-    background: #A5DE8C;
+    background-color: rgba(155, 217, 129, 1);
+
+    text-align: center;
     display: inline-block;
     margin: 0 0 0 10px;
     padding: 0 4px 0 4px;
-    border-radius: 4px;
+    border-radius: 3px;
+
+    height: 18px;
+    width: 86px;
 }
 
 .act-request-message span.text {
@@ -253,4 +259,10 @@
     .act-request-list ul{padding: 0;}
     .act-request-list ul li{margin: 0 0 4px;}
     .act-request-list dd{margin: 0 0 15px;}
+
+    .act-request-quotation-label {
+        display: block;
+        margin: 7px 0 8px 0px;
+        padding: 0 4px 0 4px;
+    }
 }
