--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/messages.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/messages.css
@@ -38,7 +38,7 @@
     margin: 0 0 30px 17px;
 }
 /*.messages .dialogs {*/
-/*display: inline-block;*/
+    /*display: inline-block;*/
 /*}*/
 .dialog-section {
     background: white;
@@ -293,6 +293,8 @@
     color: rgba(0, 0, 0, 0.87);
     font-family: LatoRegular;
     font-size: 16px;
+    vertical-align: middle;
+    width: auto;
 }
 .messages .dialogs .dialog-rating-container .avatar {
     padding: 0 0 0 15px;
@@ -461,7 +463,6 @@
     }
 
     .messages .dialogs .dialog-rating-container .rating {
-        display: inline;
         padding: 0 0 0 7px;
     }
     .messages .dialogs .dialog-rating-container .message-block {
