--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
@@ -80,7 +80,7 @@
                         </div>
 
                         <div class="button-gradient orange">
-                            <button type="button" class="btn register rejectRequest">Not available</button>
+                            <button type="button" order-id="{{ order.id }}" class="btn register rejectRequest">Not available</button>
                         </div>
                     </div>
 
