add style for statuses in events

--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/artist-selection.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/artist-selection.css
@@ -1,5 +1,6 @@
 /* --- COLORS SECTION --- */
 .color-kelly { color: #6eb421; }
+.color-india { color: rgba(219, 98, 85, 1); }
 
 /* --- ARTIST SECTION -- */
 .artist-selection {
